@@ -1,13 +1,17 @@
 package br.edu.ufop.web.ticket.sales.services;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import br.edu.ufop.web.ticket.sales.converters.EventConverter;
+import br.edu.ufop.web.ticket.sales.domain.EventDomain;
+import br.edu.ufop.web.ticket.sales.dtos.CreateEventDTO;
+import br.edu.ufop.web.ticket.sales.dtos.DeleteEventDTO;
 import br.edu.ufop.web.ticket.sales.dtos.EventDTO;
+import br.edu.ufop.web.ticket.sales.dtos.UpdateEventDTO;
 import br.edu.ufop.web.ticket.sales.models.EventModel;
 import br.edu.ufop.web.ticket.sales.repositories.IEventRepository;
 import jakarta.persistence.EntityNotFoundException;
@@ -18,45 +22,57 @@ import lombok.RequiredArgsConstructor;
 public class EventService {
 
     private final IEventRepository eventRepository;
-    private final EventConverter eventConverter;
 
     public List<EventDTO> getAllEvents() {
         return eventRepository.findAll().stream()
-                .map(eventConverter::toDTO)
-                .collect(Collectors.toList());
+                .map(EventConverter::toDTO)
+                .toList();
     }
 
-    public EventDTO getEventById(UUID id) {
-        EventModel event = eventRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Event not found with id: " + id));
-        return eventConverter.toDTO(event);
-    }
-
-    public EventDTO createEvent(EventDTO eventDTO) {
-        EventModel eventModel = eventConverter.toModel(eventDTO);
-        eventModel = eventRepository.save(eventModel);
-        return eventConverter.toDTO(eventModel);
-    }
-
-    public EventDTO updateEvent(UUID id, EventDTO eventDTO) {
-        EventModel existingEvent = eventRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Event not found with id: " + id));
-
-        existingEvent.setDescription(eventDTO.getDescription());
-        existingEvent.setType(eventDTO.getType());
-        existingEvent.setDate(eventDTO.getDate());
-        existingEvent.setStartSales(eventDTO.getStartSales());
-        existingEvent.setEndSales(eventDTO.getEndSales());
-        existingEvent.setPrice(eventDTO.getPrice());
-
-        existingEvent = eventRepository.save(existingEvent);
-        return eventConverter.toDTO(existingEvent);
-    }
-
-    public void deleteEvent(UUID id) {
-        if (!eventRepository.existsById(id)) {
-            throw new EntityNotFoundException("Event not found with id: " + id);
+    public EventDTO getEventById(String id) {
+        UUID uuid = UUID.fromString(id);
+        Optional<EventModel> optionalEvent = eventRepository.findById(uuid);
+        if (optionalEvent.isPresent()) {
+            EventModel event = optionalEvent.get();
+            return EventConverter.toDTO(event);
         }
-        eventRepository.deleteById(id);
+        return null;
     }
-}
+
+    public EventDTO createEvent(CreateEventDTO createEventDTO) {
+
+        EventDomain eventDomain = EventConverter.toDomain(createEventDTO);
+        EventModel eventModel = EventConverter.toModel(eventDomain);
+        return EventConverter.toDTO(eventRepository.save(eventModel));
+    }
+
+    public EventDTO updateEvent(UpdateEventDTO updateEventDTO) {
+
+        Optional<EventModel> optionalEventModel = eventRepository.findById(updateEventDTO.getId());
+
+        if(optionalEventModel.isEmpty()){
+            return null;
+        }
+        
+        EventModel eventModel = optionalEventModel.get();
+        EventDomain eventDomain = EventConverter.toDomain(updateEventDTO);     
+    
+        eventModel.setDescription(eventDomain.getDescription());
+        eventModel.setType(eventDomain.getType());
+        eventModel.setDate(eventDomain.getDate());
+        eventModel.setStartSales(eventDomain.getStartSales());
+        eventModel.setEndSales(eventDomain.getEndSales());
+        eventModel.setPrice(eventDomain.getPrice());
+        return EventConverter.toDTO(eventRepository.save(eventModel));
+    }
+
+    public void deleteEvent(DeleteEventDTO deleteEventDTO) {
+
+        Optional<EventModel> optionalEvent = eventRepository.findById(deleteEventDTO.id());
+
+        if (optionalEvent.isEmpty()) {
+            throw new EntityNotFoundException("Event not found");
+        }
+        eventRepository.delete(optionalEvent.get());
+    }
+} 
